repositioned divs to avoid overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,9 +25,9 @@ body {
   color: #222;
   font-family: monospace;
   text-align: center;
+  font-size: 0.95em;
   margin: 0;
   padding: 0;
-  height: 95%;
 }
 a:link,
 a:visited,
@@ -59,19 +59,19 @@ button {
 /* Containers */
 .container {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
   font-weight: bold;
   text-align: center;
-  justify-content: center;
+}
+.container > div {
+  margin: auto;
 }
 
 .footer {
   display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
   height: 150px;
+  margin-top: 10em;
   align-self: flex-end;
   flex-direction: column;
 }
@@ -166,7 +166,8 @@ nav li {
   padding-right: 1em;
 }
 nav ul {
-  margin: 0;
+  margin-top: 0.1em;
+  margin-bottom: 0;
   padding-left: 0;
 }
 nav li:hover {
@@ -176,7 +177,7 @@ nav ul li ul {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  top: 2.1em;
+  top: 2em;
   left: 0;
   display: block;
   background-color: #fff;
@@ -205,6 +206,11 @@ nav ul li:active {
   display: none;
   position: absolute;
   top: 8em;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 60em;
 }
 #high-scores-container > .menubar {
   padding: 1em;
@@ -232,6 +238,10 @@ nav ul li:active {
 #about-container {
   position: absolute;
   top: 8em;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 40em;
   display: none;
 }
